--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,62 +1,21 @@
-# Python 3.12.10 compatible requirements
+# backend/requirements.txt - COMPATIBLE VERSIONS
+fastapi==0.104.1
+uvicorn[standard]==0.20.0
+python-multipart==0.0.6
+python-dotenv==1.0.0
+Pillow==10.1.0
+requests==2.31.0
+anthropic==0.7.8
 
-reportlab==4.4.2
-# Agent Framework
-uagents==0.22.5
+# uAgents with compatible dependencies
+uagents==0.12.0
+protobuf==4.25.0
+grpcio==1.59.0
 
-# AI and API Integration
-anthropic==0.54.0
+# HTTP client for inter-agent communication  
+httpx==0.25.2
+aiofiles==23.2.1
 
-# Web Framework and API
-fastapi==0.115.13
-uvicorn==0.34.3
-python-multipart==0.0.20
-
-# Computer Vision and Image Processing
-Pillow==11.2.1
-
-# Machine Learning and Deep Learning - COMPATIBLE VERSIONS
-torch==2.7.1
-torchvision==0.22.1
-# Note: If you have torchaudio installed and getting conflicts, uninstall it first:
-# pip uninstall torchaudio
-# We don't need torchaudio for chest X-ray analysis
-
-scikit-learn==1.7.0
-
-# Dataset and Data Processing
-datasets==3.6.0
-transformers>=4.46.0
-huggingface-hub>=0.26.0
-
-# Data Science and Utilities
-numpy>=1.24.0,<2.0.0
-pandas>=2.0.0,<3.0.0
-
-# Additional ML utilities
-scikit-image>=0.22.0
-opencv-python>=4.8.0
-
-# Environment and Configuration
-python-dotenv>=1.0.0
-pydantic>=2.0.0
-
-# Development and Testing
-pytest>=8.0.0
-black>=24.0.0
-isort>=5.13.0
-
-# Async and HTTP
-httpx>=0.25.0
-aiofiles>=23.0.0
-
-# Logging and Monitoring
-structlog>=23.0.0
-rich>=13.0.0
-
-# Training utilities
-tqdm>=4.65.0
-
-# Optional: For CUDA support (uncomment if using GPU)
-# torch==2.7.1+cu121 --index-url https://download.pytorch.org/whl/cu121
-# torchvision==0.22.1+cu121 --index-url https://download.pytorch.org/whl/cu121
+# Development
+pytest==7.4.3
+pytest-asyncio==0.21.1
